...
                verticalAlignment = Alignment.CenterVertically
            ) {
                OutlinedButton(
                    onClick = button1OnClick,
                    modifier = Modifier
                        .weight(1f)
                        .testTag(button1Text + title),  // E.g. "EnableWiFi"
                    enabled = enabled
                ) {
                    Text(button1Text)
                }
                OutlinedButton(
                    onClick = button2OnClick,
...
